# HyperParameterOptimizationPresentation

./: .gitignore  HyperparameterOptimization.ipynb  README.md  index.html  index.slides.html  optuna_example.py  pyproject.toml
.ipynb_checkpoints/: HyperparameterOptimization-checkpoint.ipynb  MachineLearningExample-checkpoint.ipynb  Pulsar_data-checkpoint.csv  Week3-checkpoint.ipynb  index-checkpoint.ipynb
notebooks/: HyperparameterOptimization.slides.html  HyperparameterOptimization_CreateData.ipynb
