[tool.poetry]
name = "2021-08-19-hyperparameteroptimization_summeruniversity"
version = "0.1.0"
description = ""
authors = ["Christian Michelsen <christianmichelsen@gmail.com>"]

[tool.poetry.dependencies]
#python = "^3.8"
python = ">=3.8,<3.10"
numpy = "^1.21.2"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
scikit-learn = "^0.24.2"
scipy = "^1.7.1"
ipywidgets = "^7.6.3"
graphviz = "^0.17"
ipykernel = "^6.2.0"
bayesian-optimization = "^1.2.0"
lightgbm = "^3.2.1"
optuna = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
